--- a/home-manager/waybar.css
+++ b/home-manager/waybar.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: Helvetica, "Font Awesome 5 Free", sans-serif;
     font-size: 13px;
     min-height: 0;
 }
