remove tweag account from calendar

--- a/home-manager/waybar.css
+++ b/home-manager/waybar.css
@@ -104,10 +104,10 @@ window#waybar {
     background: #4285f4;
 }
 #custom-cal.user-1 {
-    background: #f67755;
+    background: #33b679;
 }
 #custom-cal.user-2 {
-    background: #33b679;
+    background: #9e69af;
 }
 
 #custom-marvin {
